--- a/_config.yml
+++ b/_config.yml
@@ -139,7 +139,7 @@ content:
   - title: Publications
     layout: text
     content: | # this will include new lines to allow paragraphs
-      - Balamurali, G. S., Reshnuraj, R. S., Johnson, J., Kodandaramaiah, U., & Somanathan, H. (2021). Visual associative learning and olfactory preferences of the greater banded hornet, Vespa tropica. In Insectes Sociaux (Vol. 68, Issues 2–3, pp. 217–226). Springer Science and Business Media LLC. [https://doi.org/10.1007/s00040-021-00820-w](https://doi.org/10.1007/s00040-021-00820-w)
+      - Balamurali, G. S., Reshnuraj, R. S., <u>Johnson, J.</u>, Kodandaramaiah, U., & Somanathan, H. (2021). Visual associative learning and olfactory preferences of the greater banded hornet, Vespa tropica. In Insectes Sociaux (Vol. 68, Issues 2–3, pp. 217–226). Springer Science and Business Media LLC. [https://doi.org/10.1007/s00040-021-00820-w](https://doi.org/10.1007/s00040-021-00820-w)
 
   - title: Conferences & Presentations
     layout: text
@@ -167,6 +167,9 @@ content:
       - Video games
       - Listening to instrumental songs (math-rock)
       - Postal stamp and coin collection
+
+
+      For the pdf version of this resume please click [here](https://github.com/jeweljohnsonj/jeweljohnson.github.io/blob/main/Jewel_cv_2021.pdf).
 
 # Footer
 footer_show_references: true
