--- a/_config.yml
+++ b/_config.yml
@@ -58,19 +58,19 @@ content:
       - layout: top-middle
         title:  Integrated BS-MS Dual Degree in Biological Sciences
         caption: August 2015 - August 2020
-        sub_title: [Indian Institute of Science Education and Research Thiruvananthapuram](https://www.iisertvm.ac.in/)
+        sub_title: Indian Institute of Science Education and Research Thiruvananthapuram
         quote: >
           CGPA 8.31/10
       - layout: top-middle
         title:  Biology with Maths, Class XII
         caption: August 2013 - June 2015
-        sub_title: [St. Michael’s Anglo Indian Higher Secondary School Kannur](https://en.wikipedia.org/wiki/St._Michael%27s_School,_Kannur)
+        sub_title: St. Michael’s Anglo Indian Higher Secondary School Kannur
         quote: >
           Percentage marks: 93%
       - layout: top-middle
         title:  Class X
         caption: June 2013
-        sub_title: [St. Michael’s Anglo Indian Higher Secondary School Kannur](https://en.wikipedia.org/wiki/St._Michael%27s_School,_Kannur)
+        sub_title: St. Michael’s Anglo Indian Higher Secondary School Kannur
         quote: >
           Percentage marks: 90%
 
