--- a/_config.yml
+++ b/_config.yml
@@ -165,7 +165,7 @@ content:
       - Birding
       - Trekking and cycling
       - Video games
-      - Listening to instrumental songs (math-rock)
+      - Listening to instrumental songs ([math-rock](https://open.spotify.com/playlist/3azj7ec5AE0ApRN3DrHOXh?si=4ae64ab719ef4eae))
       - Postal stamp and coin collection
 
 
