--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ phone: +(91) 8301082500
 # website: https://jeweljohnsonj.github.io/jeweljohnson.github.io/
 
 # Dark Mode (true/false/never)
-darkmode: false
+darkmode: true
 
 # Social links
 twitter_username: jeweljohnsonj
