--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ github_username:  jeweljohnsonj
 additional_links:
 - title: itsgoingto.be
   icon: fas fa-globe
-  url: https://jeweljohnsonj.github.io/jeweljohnson.github.io/
+  url: https://jeweljohnsonj.github.io/one-carat-blog/
 # - title: another link
 #   icon: font awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&m=free)
 #   url: Link url (eg. https://google.com)
