--- a/_config.yml
+++ b/_config.yml
@@ -175,7 +175,7 @@ content:
       - Postal stamp and coin collection
 
 
-      For the pdf version of this resume please click [here](https://github.com/jeweljohnsonj/jeweljohnson.github.io/blob/main/Jewel_cv_2021.pdf).
+      For the pdf version of this resume please click [here](https://github.com/jeweljohnsonj/one-carat-blog/blob/main/cv/jewel_may_2022.pdf).
 
 # Footer
 footer_show_references: true
