--- a/_config.yml
+++ b/_config.yml
@@ -169,6 +169,7 @@ content:
     content: | # this will include new lines to allow paragraphs
       - Photographing wildlife ([500px account](https://bit.ly/3CtjDa1))
       - Birding
+      - Teaching
       - Trekking and cycling
       - Listening to instrumental songs
       - Postal stamp and coin collection
