--- a/_config.yml
+++ b/_config.yml
@@ -95,7 +95,7 @@ content:
         sub_title: IISER-TVM, India
         caption: May 2019 - April 2020
         quote: >
-           Visual ecology of the giant honey bee (Apis dorsata)
+           Visual ecology of the Giant Honey Bee (Apis dorsata)
         description: | # this will include new lines to allow paragraphs
             This project was carried out under the supervision of [Prof. Hema Somanathan](https://faculty.iisertvm.ac.in/beelab/). The Giant Honeybee (*Apis dorsata*) is known to be facultative nocturnal species of bees who occasionally forage on flowers during crepuscular and full-moon periods. Despite having day adapted eyes, it is not known how *A. dorsata* can forage at low light conditions. So my project was aimed at understanding the visual ecology *A. dorsata*.
 
