--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,7 @@ version: 2
 # Personal info
 name: Jewel Johnson
 title: BS-MS Dual Degree in Biological Sciences 
+email: jewel15@alumni.iisertvm.ac.in
 email: jeweljohnsonj@gmail.com
 phone: +(91) 8301082500
 # website: https://jeweljohnsonj.github.io/jeweljohnson.github.io/
